AMCR-213 Search by organisation name and ID
