# src/Api/Data/ComplianceDeclarationSearchQuery.cs
@@ -8,4 +8,5 @@ public record ComplianceDeclarationSearchQuery
     public ComplianceDeclarationStatus[]? Status { get; init; }
     public RegistrationType[]? RegistrationType { get; init; }
     public string? OrganisationName { get; init; }
+    public string? OrganisationSearch { get; init; }
 }
