# tests/Api.Tests/Endpoints/OpenApi/OpenApiTests.OpenApi_VerifyAsExpected.verified.json
@@ -529,6 +529,16 @@
             }
           },
           {
+            "name": "organisationSearch",
+            "in": "query",
+            "description": "Case-insensitive partial match on organisation name, compliance scheme name, scheme operator name or reference number",
+            "schema": {
+              "maxLength": 100,
+              "minLength": 0,
+              "type": "string"
+            }
+          },
+          {
             "name": "page",
             "in": "query",
             "description": "Page number (1-based), defaults to 1 if not specified",
